compiler/lume_parse/src/snapshots/lume_parse__tests__function_definition_snapshots@statements.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"fn main() { let a = 0; let b = 1; }\")"
---
SOURCE_FILE@0..35
  FN@0..35
    SIG@0..9
      FN_KW@0..2 "fn"
      WHITESPACE@2..3 " "
      NAME@3..7
        IDENT@3..7 "main"
      PARAM_LIST@7..9
        LEFT_PAREN@7..8 "("
        RIGHT_PAREN@8..9 ")"
    WHITESPACE@9..10 " "
    BLOCK@10..35
      LEFT_BRACE@10..11 "{"
      WHITESPACE@11..12 " "
      LET_STMT@12..22
        LET_KW@12..15 "let"
        WHITESPACE@15..16 " "
        NAME@16..17
          IDENT@16..17 "a"
        WHITESPACE@17..18 " "
        ASSIGN@18..19 "="
        WHITESPACE@19..20 " "
        LIT_EXPR@20..21
          LITERAL@20..21
            INTEGER_LIT@20..21 "0"
        SEMICOLON@21..22 ";"
      WHITESPACE@22..23 " "
      LET_STMT@23..33
        LET_KW@23..26 "let"
        WHITESPACE@26..27 " "
        NAME@27..28
          IDENT@27..28 "b"
        WHITESPACE@28..29 " "
        ASSIGN@29..30 "="
        WHITESPACE@30..31 " "
        LIT_EXPR@31..32
          LITERAL@31..32
            INTEGER_LIT@31..32 "1"
        SEMICOLON@32..33 ";"
      WHITESPACE@33..34 " "
      RIGHT_BRACE@34..35 "}"
