compiler/lume_parse/src/snapshots/lume_parse__tests__generic_enum_snapshots@constrained_generics.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"enum Test<T1: Numeric, T2: Numeric> {}\")"
---
SOURCE_FILE@0..38
  ENUM@0..38
    ENUM_KW@0..4 "enum"
    WHITESPACE@4..5 " "
    NAME@5..9
      IDENT@5..9 "Test"
    BOUND_TYPES@9..35
      LESS@9..10 "<"
      BOUND_TYPE@10..21
        IDENT@10..12 "T1"
        CONSTRAINTS@12..21
          COLON@12..13 ":"
          WHITESPACE@13..14 " "
          NAMED_TYPE@14..21
            PATH@14..21
              PATH_SEGMENT@14..21
                PATH_TYPE@14..21
                  IDENT@14..21 "Numeric"
      COMMA@21..22 ","
      WHITESPACE@22..23 " "
      BOUND_TYPE@23..34
        IDENT@23..25 "T2"
        CONSTRAINTS@25..34
          COLON@25..26 ":"
          WHITESPACE@26..27 " "
          NAMED_TYPE@27..34
            PATH@27..34
              PATH_SEGMENT@27..34
                PATH_TYPE@27..34
                  IDENT@27..34 "Numeric"
      GREATER@34..35 ">"
    WHITESPACE@35..36 " "
    LEFT_BRACE@36..37 "{"
    RIGHT_BRACE@37..38 "}"
