compiler/lume_parse/src/snapshots/lume_parse__tests__generic_enum_snapshots@single_generic.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"enum Test<T> {}\")"
---
SOURCE_FILE@0..15
  ENUM@0..15
    ENUM_KW@0..4 "enum"
    WHITESPACE@4..5 " "
    NAME@5..9
      IDENT@5..9 "Test"
    BOUND_TYPES@9..12
      LESS@9..10 "<"
      BOUND_TYPE@10..11
        IDENT@10..11 "T"
      GREATER@11..12 ">"
    WHITESPACE@12..13 " "
    LEFT_BRACE@13..14 "{"
    RIGHT_BRACE@14..15 "}"
